@@ -1,0 +1,8 @@
+import numpy as np
+
+def support_combo_score():
+	#we scrape the lineup and evaluate base on three categories: greedy, defensive, aggressive
+	#we may appy statistical learning models in this problem
+
+	pass
+
